--- a/travel_speed/index.html
+++ b/travel_speed/index.html
@@ -145,7 +145,8 @@
                 <div class="collapse show results">
                     <p>Travel time: <span id="arrivalTime">00:00:00</span></p>
                     <hr>
-                    <!--<p>Army detection after: <span id="detectionTime">00:00:00</span></p>-->
+                    <p>Army detection after: <span id="detectionTimeAfter">00:00:00</span></p>
+                    <hr>
                     <p>Appear of the horn with: <span id="detectionTime">00:00:00</span></p>
                 </div>
             </div>
