--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         <img src="./img_base/travel_speed.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Travel Speed Calculator</h2>
+                        <h2>Attack Detection Time Calculator</h2>
                         <hr>
-                        <p>Calculate the exact land time of your attack.</p>
+                        <p>Calculate the exact land time of an attack, and check when will the defender sees that.</p>
                     </div>
                 </a>
             </div>
