--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img src="./img_base/look-items.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Look items Overview</h2>
+                        <h2>Look-items Overview</h2>
                         <hr>
                         <p>This page loads the in-game look items automatically!</p>
                     </div>
