--- a/look_items/index.html
+++ b/look_items/index.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-12 mb-2">
         <div class="col-12 page-title">
-          <h1>GGE LOOK ITEMS</h1>
+          <h1>GGE LOOK-ITEMS</h1>
         </div>
 
         <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
