--- a/index.html
+++ b/index.html
@@ -4,158 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generals Forum</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" type="image/webp" href="./img_base/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+    <meta name="title" content="">
+    <meta name="description" content="">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="">
+
 </head>
 
 <body>
     <div class="container">
+
         <a href="https://www.youtube.com/@GeneralsCamp" class="home-icon-link" target="_blank">
             <div class="home-icon">
                 <i class="bi bi-youtube"></i>
             </div>
         </a>
 
-        <div class="row">
-            <div class="col-12">
-                <h1>GENERALS FORUM</h1>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./decorations/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/decorations.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Decorations Overview</h2>
-                        <hr>
-                        <p>This page loads the in-game decorations automatically!</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./building_items/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/ci-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>CI's & TCI's Overview</h2>
-                        <hr>
-                        <p>This page loads the in-game CI's & TCI's automatically!</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./look_items/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/look-items.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Look-items Overview</h2>
-                        <hr>
-                        <p>This page loads the in-game look items automatically!</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./layout_editor/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/layout-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Layout Editor</h2>
-                        <hr>
-                        <p>Design and manage your layouts manually or automatically.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./hol_simulator/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/hall-of-legends-simulator-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Hall of Legends Simulator</h2>
-                        <hr>
-                        <p>Try point allocations without spending rubies.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./food_calculator/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/food-production-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Food Production Calculator</h2>
-                        <hr>
-                        <p>Calculate your in-game food production easily.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./wall_limit/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/wall-limit-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Wall Limit Calculator</h2>
-                        <hr>
-                        <p>Calculate your wall unit limit with absolute accuracy.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./collector_calculator/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/collector.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Collector Event Calculator</h2>
-                        <hr>
-                        <p>Calculate that how many points you need to reach your goal.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./travel_speed/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/travel_speed.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Detection Time Calculator</h2>
-                        <hr>
-                        <p>Calculate the exact land time, and detection time of an attack.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./battle_simulator/index.html" class="box" disabled>
-                    <div class="box-icon">
-                        <img src="./img_base/battle-simulator-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Battle Simulator (BETA)</h2>
-                        <hr>
-                        <p>Try to attack or defend without any in-game losses.</p>
-                    </div>
-                </a>
-            </div>
+        <h1>GENERALS FORUM</h1>
+        <h2 class="collapse-header mt-2"><span class="header-title">OVERVIEWS</span></h2>
+        <div id="overviews" class="category-wrapper">
+            <div class="category-grid"></div>
         </div>
+
+        <h2 class="collapse-header"><span class="header-title">SIMULATORS</span></h2>
+        <div id="simulators" class="category-wrapper">
+            <div class="category-grid"></div>
+        </div>
+        
+        <h2 class="collapse-header"><span class="header-title">CALCULATORS</span></h2>
+        <div id="calculators" class="category-wrapper">
+            <div class="category-grid"></div>
+        </div>
+
+        <script src="main.js"></script>
+        <script src="metadata.js"></script>
     </div>
 </body>
 
