--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
-
+    <title>Generals Forum – Tools, Calculators & Simulators</title>
+    <meta property="og:title" content="Generals Forum">
+    <meta property="og:description" content="Tools, calculators and simulators.">
+    <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/share-banner.webp">
+    <meta property="og:url" content="https://generalscamp.github.io/forum/">
 </head>
 
 <body>
@@ -36,14 +35,13 @@
         <div id="simulators" class="category-wrapper">
             <div class="category-grid"></div>
         </div>
-        
+
         <h2 class="collapse-header"><span class="header-title">CALCULATORS</span></h2>
         <div id="calculators" class="category-wrapper">
             <div class="category-grid"></div>
         </div>
 
         <script src="main.js"></script>
-        <script src="metadata.js"></script>
     </div>
 </body>
 
