--- a/rift_raid_points/index.html
+++ b/rift_raid_points/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Activity Points Calculator</title>
-
+  <title>Rift Raid Point Calculator</title>
+  <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     rel="stylesheet">
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>ACTIVITY POINTS CALCULATOR</h1>
+        <h1>RIFT RAID POINT CALCULATOR</h1>
       </div>
 
       <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
@@ -33,7 +33,7 @@
         <div class="collapse show">
           <form class="calculator-bonuses-form row" onsubmit="return false;">
 
-            <div class="col-md-3 col-6 form-group">
+            <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="area">Area</label>
               <select id="area" class="form-select">
                 <option value="courtyard">Courtyard (1000)</option>
@@ -41,7 +41,7 @@
               </select>
             </div>
 
-            <div class="col-md-3 col-6 form-group">
+            <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="level">Boss level</label>
               <select id="level" class="form-select">
                 <option value="1">Level 1</option>
@@ -57,18 +57,19 @@
               </select>
             </div>
 
-            <div class="col-md-3 col-6 form-group">
+            <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="defeated">Defeated troops</label>
               <input type="number" id="defeated" class="form-control" min="0" value="20000">
             </div>
 
-            <div class="col-md-3 col-6 form-group">
+            <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="faced">Faced troops</label>
               <input type="number" id="faced" class="form-control" min="1" value="75000">
             </div>
 
           </form>
         </div>
+
       </div>
 
       <!-- RESULTS -->
