--- a/rift_raid_points/index.html
+++ b/rift_raid_points/index.html
@@ -57,16 +57,15 @@
               </select>
             </div>
 
+            <div class="col-12 col-md-6 col-lg-3 form-group disabled-input">
+              <label for="faced">Faced troops</label>
+              <input type="number" id="faced" class="form-control" readonly>
+            </div>
+
             <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="defeated">Defeated troops</label>
               <input type="number" id="defeated" class="form-control" min="0" value="20000">
             </div>
-
-            <div class="col-12 col-md-6 col-lg-3 form-group">
-              <label for="faced">Faced troops</label>
-              <input type="number" id="faced" class="form-control" min="1" value="75000">
-            </div>
-
           </form>
         </div>
 
