--- a/rift_raid_points/index.html
+++ b/rift_raid_points/index.html
@@ -44,16 +44,16 @@
             <div class="col-12 col-md-6 col-lg-3 form-group">
               <label for="level">Boss level</label>
               <select id="level" class="form-select">
-                <option value="1">Level 1</option>
-                <option value="2">Level 2</option>
-                <option value="3">Level 3</option>
-                <option value="4">Level 4</option>
-                <option value="5">Level 5</option>
-                <option value="6">Level 6</option>
-                <option value="7">Level 7</option>
-                <option value="8">Level 8</option>
-                <option value="9">Level 9</option>
-                <option value="10">Level 10</option>
+                <option value="1">Level 1 (x1)</option>
+                <option value="2">Level 2 (x3)</option>
+                <option value="3">Level 3 (x8)</option>
+                <option value="4">Level 4 (x12)</option>
+                <option value="5">Level 5 (x20)</option>
+                <option value="6">Level 6 (x25)</option>
+                <option value="7">Level 7 (x30)</option>
+                <option value="8">Level 8 (x35)</option>
+                <option value="9">Level 9 (x40)</option>
+                <option value="10">Level 10 (x50)</option>
               </select>
             </div>
 
