--- a/rift_raid_points/index.html
+++ b/rift_raid_points/index.html
@@ -57,9 +57,14 @@
               </select>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-3 form-group disabled-input">
-              <label for="faced">Faced troops</label>
-              <input type="number" id="faced" class="form-control" readonly>
+            <div class="col-12 col-md-6 col-lg-3 form-group disabled-input" id="courtyardBox">
+              <label for="courtyardTroops">Courtyard troops</label>
+              <input type="number" id="courtyardTroops" class="form-control" readonly>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3 form-group disabled-input" id="wallBox">
+              <label for="wallTroops">Wall troops</label>
+              <input type="number" id="wallTroops" class="form-control" readonly>
             </div>
 
             <div class="col-12 col-md-6 col-lg-3 form-group">
