--- a/gacha_overview/index.html
+++ b/gacha_overview/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <select id="setSelect" class="form-select custom-select text-center" aria-label="Reward set">
-              <option value="" selected>Loading sets...</option>
+              <option value="" selected>Loading versions...</option>
             </select>
           </div>
           <div class="col-md-4 col-sm-12">
