--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="icon" type="image/webp" href="./img_base/favicon.ico">
     <title>Generals Forum – Tools, Calculators & Simulators</title>
     <meta property="og:title" content="Generals Forum">
     <meta property="og:description" content="Tools, calculators and simulators.">
