--- a/gacha_overview/index.html
+++ b/gacha_overview/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <main id="content" class="container-fluid">
-        <div id="rewardRows" class="row g-1"></div>
+        <div id="rewardRows" class="row gx-1"></div>
 
         <div id="loadingBox" class="loading-message">
           <h3 id="loadingStatus">Initializing...</h3>
