--- a/generals_overview/index.html
+++ b/generals_overview/index.html
@@ -21,7 +21,7 @@
           <h1>GENERALS OVERVIEW</h1>
         </div>
 
-        <a href="/" class="home-icon-link">
+        <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
           <div class="home-icon">
             <i class="bi bi-house"></i>
           </div>
