--- a/404.html
+++ b/404.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Redirect</title>
-  <meta http-equiv="refresh" content="0; url=/" />
-</head>
-<body>
   <script>
-    window.location.replace("/");
+    window.location.replace("/forum/");
   </script>
+</head>
+
+<body>
 </body>
+
 </html>
