style and title fix in all pages

--- a/overviews/building_items/index.html
+++ b/overviews/building_items/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../shared/shared.css">
-  <link rel="stylesheet" href="../../overviews/building_items/building_items.css">
+  <link rel="stylesheet" href="./building_items.css">
 </head>
 
 <body>
