--- a/overviews/event_plan/index.html
+++ b/overviews/event_plan/index.html
@@ -7,11 +7,11 @@
   <title>GGE Event Plan</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="icon" type="image/webp" href="/img_base/favicon.ico">
+  <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
     rel="stylesheet">
-  <link rel="stylesheet" href="/overviews/shared/shared.css">
-  <link rel="stylesheet" href="/overviews/event_plan/event_plan.css">
+  <link rel="stylesheet" href="../shared/shared.css">
+  <link rel="stylesheet" href="./event_plan.css">
 </head>
 
 <body>
