--- a/calculators/collector_event/index.html
+++ b/calculators/collector_event/index.html
@@ -7,7 +7,7 @@
     <title>Collector Event Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="icon" type="image/webp" href="/img_base/favicon.ico">
+    <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -36,8 +36,8 @@
 
                         <div class="col-12 form-group">
                             <label for="pointsTarget">How many points you want at the end:</label>
-                            <input type="number" id="pgge-points" class="form-control" placeholder="e.g., 80000"
-                                min="0" max="100000" step="1000">
+                            <input type="number" id="pgge-points" class="form-control" placeholder="e.g., 80000" min="0"
+                                max="100000" step="1000">
                         </div>
 
                         <div class="col-12 form-group">
