--- a/calculators/rift_raid_points/index.html
+++ b/calculators/rift_raid_points/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rift Raid Point Calculator</title>
-  <link rel="icon" type="image/webp" href="/img_base/favicon.ico">
+  <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     rel="stylesheet">
