--- a/others/assets_downloader/index.html
+++ b/others/assets_downloader/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
-    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
+    <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
