--- a/simulators/hol_simulator/index.html
+++ b/simulators/hol_simulator/index.html
@@ -7,11 +7,10 @@
     <title>HoL Simulator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-      <link rel="icon" type="image/webp" href="/img_base/favicon.ico">
+    <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
     <link rel="stylesheet" href="./styles.css">
 </head>
 
