fix download button

--- a/overviews/event_plan/index.html
+++ b/overviews/event_plan/index.html
@@ -23,11 +23,11 @@
         </div>
 
         <div id="topButtonsContainer">
-          <button id="downloadButton" class="download-icon-link" type="button" aria-label="Download event plan">
+          <a href="#" id="downloadButton" class="home-icon-link" aria-label="Download event plan">
             <div class="home-icon">
               <i class="bi bi-download"></i>
             </div>
-          </button>
+          </a>
 
           <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
             <div class="home-icon">
