--- a/overviews/loot_box/index.html
+++ b/overviews/loot_box/index.html
@@ -66,6 +66,19 @@
     </div>
   </div>
 
+  <div class="modal fade" id="lootBoxModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+        </div>
+        <div class="modal-body">
+          <div id="lootBoxRewards" class="row g-1"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
   <script type="module" src="script.js"></script>
 </body>
