add general offerings

--- a/overviews/loot_box/index.html
+++ b/overviews/loot_box/index.html
@@ -36,6 +36,21 @@
           </a>
         </div>
 
+        <div class="row note gx-1 gy-1 align-items-center pb-2">
+          <div class="col-md-6 col-sm-12">
+            <select id="viewSelect" class="form-select custom-select text-center" aria-label="View selector">
+              <option value="mystery_boxes" selected>Mystery boxes</option>
+              <option value="offerings">Offerings</option>
+            </select>
+          </div>
+
+          <div class="col-md-6 col-sm-12" id="characterSelectWrap">
+            <select id="characterSelect" class="form-select custom-select text-center" aria-label="Character selector">
+              <option value="" selected>Loading characters...</option>
+            </select>
+          </div>
+        </div>
+
       </div>
 
       <main id="content" class="container-fluid">
