--- a/overviews/look_items/index.html
+++ b/overviews/look_items/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <main id="content" class="container-fluid">
-        <div id="cards" class="row g-1"></div>
+        <div id="cards" class="row gx-1"></div>
 
         <div id="loadingBox" class="loading-message">
           <h3 id="loadingStatus">Initializing...</h3>
