Added key filter

--- a/overviews/loot_box/index.html
+++ b/overviews/loot_box/index.html
@@ -46,7 +46,7 @@
 
           <div class="col-md-6 col-sm-12" id="characterSelectWrap">
             <select id="characterSelect" class="form-select custom-select text-center" aria-label="Character selector">
-              <option value="" selected>Loading characters...</option>
+              <option value="" selected>Loading filters...</option>
             </select>
           </div>
         </div>
@@ -54,7 +54,7 @@
       </div>
 
       <main id="content" class="container-fluid">
-        <div id="cards" class="row g-1"></div>
+        <div id="cards" class="row gx-1"></div>
 
         <div id="loadingBox" class="loading-message">
           <h3 id="loadingStatus">Initializing...</h3>
