Added Empire Duels to the main page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
 
 <body>
     <div class="container">
+        <div id="topButtonsContainer">
+            <a href="./empire_duels/index.html" class="home-icon-link" title="Empire Duels">
+                <div class="home-icon">
+                    <i class="bi bi-controller"></i>
+                </div>
+            </a>
 
-        <a href="https://www.youtube.com/@GeneralsCamp" class="home-icon-link" target="_blank">
-            <div class="home-icon">
-                <i class="bi bi-youtube"></i>
-            </div>
-        </a>
+            <a href="https://www.youtube.com/@GeneralsCamp" class="home-icon-link" target="_blank">
+                <div class="home-icon">
+                    <i class="bi bi-youtube"></i>
+                </div>
+            </a>
+        </div>
 
         <h1>GENERALS FORUM</h1>
         <h2 class="collapse-header mt-2"><span class="header-title">OVERVIEWS</span></h2>
