My videos to main page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <div class="category-grid"></div>
         </div>
 
+        <h2 class="collapse-header"><span class="header-title">MY LATEST VIDEOS</span></h2>
+        <div id="latestVideos" class="category-wrapper">
+            <div class="video-grid">
+                <div class="video-loading">Loading latest videos...</div>
+            </div>
+        </div>
+
         <script src="main.js"></script>
     </div>
 </body>
