New main page design

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             <div class="category-grid"></div>
         </div>
 
-        <h2 class="collapse-header"><span class="header-title">MY LATEST VIDEOS</span></h2>
+        <h2 class="collapse-header"><span class="header-title">WHAT I'M WORKING ON</span></h2>
+        <div id="nowPanel" class="category-wrapper">
+            <div class="now-grid"></div>
+        </div>
+
+        <h2 class="collapse-header"><span class="header-title">MY LATEST GGE VIDEOS</span></h2>
         <div id="latestVideos" class="category-wrapper">
             <div class="video-grid">
                 <div class="video-loading">Loading latest videos...</div>
