Fixed the new main page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div id="topButtonsContainer">
-            <a href="./empire_duels/index.html" class="home-icon-link" title="Empire Duels">
+            <a href="./empire_duels/index.html" class="home-icon-link empire-duels-link" title="Empire Duels">
                 <div class="home-icon">
                     <i class="bi bi-controller"></i>
                 </div>
