Small style changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <h2 class="collapse-header mt-2"><span class="header-title">OVERVIEWS</span></h2>
+        <h2 class="collapse-header"><span class="header-title">OVERVIEWS</span></h2>
         <div id="overviews" class="category-wrapper">
             <div class="category-grid"></div>
         </div>
