Changes in "Units & Tools Overview"

--- a/overviews/units_tools_overview/index.html
+++ b/overviews/units_tools_overview/index.html
@@ -46,9 +46,16 @@
               <option value="all" selected>All types</option>
             </select>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div id="orderFilterWrap" class="col-md-4 col-sm-12">
             <select id="orderSelect" class="form-select custom-select text-center" aria-label="Order selector">
               <option value="none" selected>Sort by Default</option>
+            </select>
+          </div>
+          <div id="toolTypeFilterWrap" class="col-md-4 col-sm-12 d-none">
+            <select id="toolTypeSelect" class="form-select custom-select text-center" aria-label="Tool type selector">
+              <option value="all" selected>All tools</option>
+              <option value="defence">Defense tools</option>
+              <option value="attack">Attack tools</option>
             </select>
           </div>
         </div>
