--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/webp" href="./img_base/favicon.ico">
-    <title>Generals Forum – Tools, Calculators & Simulators</title>
+    <title>Generals Forum - Goodgame Empire Tools & Simulators</title>
+    <meta name="description" content="Generals Forum provides Goodgame Empire tools, calculators, simulators, event overviews, and practical guides in one place.">
+    <link rel="canonical" href="https://generalscamp.github.io/forum/">
+    <meta name="robots" content="index,follow,max-image-preview:large">
     <meta property="og:title" content="Generals Forum">
     <meta property="og:description" content="Tools, calculators and simulators.">
     <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/share-banner.webp">
