fixed page icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/webp" href="./img_base/favicon.ico">
+    <link rel="icon" href="/forum/img_base/favicon.ico" sizes="any">
+    <link rel="shortcut icon" href="/forum/img_base/favicon.ico">
+    <link rel="apple-touch-icon" href="/forum/img_base/favicon.ico">
     <title>Generals Forum - Goodgame Empire Tools & Simulators</title>
     <meta name="description" content="Generals Forum provides Goodgame Empire tools, calculators, simulators, event overviews, and practical guides in one place.">
     <link rel="canonical" href="https://generalscamp.github.io/forum/">
