Testing Google Analitycs

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <meta property="og:description" content="Tools, calculators and simulators.">
     <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/share-banner.webp">
     <meta property="og:url" content="https://generalscamp.github.io/forum/">
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TGZRNFGRR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-8TGZRNFGRR');
+    </script>
 </head>
 
 <body>
