--- a/calculators/mead_production/index.html
+++ b/calculators/mead_production/index.html
@@ -11,6 +11,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../../overviews/shared/consent.css">
+  <meta property="og:title" content="Mead Production Calculator | Generals Forum">
+  <meta property="og:description" content="Calculate your mead production easily.">
+  <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/mead-icon.webp">
 </head>
 
 <body>
@@ -442,6 +446,14 @@
   </div>
 
   <script src="./script.js"></script>
+  <script type="module">
+    import { initConsentManager } from "../../overviews/shared/ConsentManager.mjs";
+    initConsentManager({
+      measurementId: "G-8TGZRNFGRR",
+      storageKey: "gf_analytics_state_v1",
+      defaultState: "enabled"
+    });
+  </script>
 </body>
 
 </html>
