--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./overviews/shared/consent.css">
     <link rel="icon" href="/forum/img_base/favicon.ico" sizes="any">
     <link rel="shortcut icon" href="/forum/img_base/favicon.ico">
     <link rel="apple-touch-icon" href="/forum/img_base/favicon.ico">
@@ -16,17 +17,9 @@
     <link rel="canonical" href="https://generalscamp.github.io/forum/">
     <meta name="robots" content="index,follow,max-image-preview:large">
     <meta property="og:title" content="Generals Forum">
-    <meta property="og:description" content="Tools, calculators and simulators.">
+    <meta property="og:description" content="Goodgame Empire Tools & Simulators">
     <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/share-banner.webp">
     <meta property="og:url" content="https://generalscamp.github.io/forum/">
-    
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8TGZRNFGRR"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-8TGZRNFGRR');
-    </script>
 </head>
 
 <body>
@@ -67,7 +60,7 @@
             <div class="now-grid"></div>
         </div>
 
-        <script src="main.js"></script>
+        <script type="module" src="main.js"></script>
     </div>
 </body>
 
