--- a/overviews/event_plan/index.html
+++ b/overviews/event_plan/index.html
@@ -12,6 +12,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../shared/shared.css">
   <link rel="stylesheet" href="./event_plan.css">
+  <link rel="stylesheet" href="../shared/consent.css">
+  <meta property="og:title" content="Event plan Overview | Generals Forum">
+  <meta property="og:description" content="This page loads the event plans automatically!">
+  <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/event-plan-icon.webp">
 </head>
 
 <body>
@@ -67,6 +71,14 @@
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script type="module">
+    import { initConsentManager } from "../shared/ConsentManager.mjs";
+    initConsentManager({
+      measurementId: "G-8TGZRNFGRR",
+      storageKey: "gf_analytics_state_v1",
+      defaultState: "enabled"
+    });
+  </script>
 </body>
 
 </html>
