--- a/overviews/generals/index.html
+++ b/overviews/generals/index.html
@@ -12,6 +12,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../shared/shared.css">
   <link rel="stylesheet" href="./generals_overview.css">
+  <link rel="stylesheet" href="../shared/consent.css">
+  <meta property="og:title" content="Generals Overview | Generals Forum">
+  <meta property="og:description" content="This page loads the in-game generals automatically!">
+  <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/generals-icon.webp">
 </head>
 
 <body>
@@ -103,6 +107,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="script.js"></script>
+  <script type="module">
+    import { initConsentManager } from "../shared/ConsentManager.mjs";
+    initConsentManager({
+      measurementId: "G-8TGZRNFGRR",
+      storageKey: "gf_analytics_state_v1",
+      defaultState: "enabled"
+    });
+  </script>
 </body>
 
 </html>
