--- a/simulators/hol_simulator/index.html
+++ b/simulators/hol_simulator/index.html
@@ -12,6 +12,10 @@
         rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="../../overviews/shared/consent.css">
+  <meta property="og:title" content="Hall of Legends Simulator | Generals Forum">
+  <meta property="og:description" content="Try point allocations without spending rubies.">
+  <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/hall-of-legends-simulator-icon.webp">
 </head>
 
 <body>
@@ -539,6 +543,14 @@
     </div>
     </div>
     <script src="./script.js"></script>
+  <script type="module">
+    import { initConsentManager } from "../../overviews/shared/ConsentManager.mjs";
+    initConsentManager({
+      measurementId: "G-8TGZRNFGRR",
+      storageKey: "gf_analytics_state_v1",
+      defaultState: "enabled"
+    });
+  </script>
 </body>
 
 </html>
