--- a/simulators/layout_editor/index.html
+++ b/simulators/layout_editor/index.html
@@ -10,6 +10,10 @@
     <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
     <meta name="description" content="Efficient castle layout editor for Goodgame Empire & Empire: Four Kingdoms!">
     <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../../overviews/shared/consent.css">
+  <meta property="og:title" content="Castle Layout Simulator | Generals Forum">
+  <meta property="og:description" content="Design and manage your layouts manually or automatically.">
+  <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/layout-icon.webp">
 </head>
 
 <body>
@@ -219,6 +223,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+  <script type="module">
+    import { initConsentManager } from "../../overviews/shared/ConsentManager.mjs";
+    initConsentManager({
+      measurementId: "G-8TGZRNFGRR",
+      storageKey: "gf_analytics_state_v1",
+      defaultState: "enabled"
+    });
+  </script>
 </body>
 
 </html>
