Small changes, and removed duplicated images

--- a/overviews/rift_event/index.html
+++ b/overviews/rift_event/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rift Event Rewards</title>
+  <title>GGE Rift Event Overview</title>
   <link rel="icon" type="image/webp" href="../../img_base/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../shared/shared.css">
   <link rel="stylesheet" href="../shared/consent.css">
-  <link rel="stylesheet" href="rift_event_rewards.css">
-  <meta property="og:title" content="Rift Event Rewards | Generals Forum">
+  <link rel="stylesheet" href="rift_event.css">
+  <meta property="og:title" content="Rift Event | Generals Forum">
   <meta property="og:description" content="View individual and boss defeat rewards for Rift events.">
   <meta property="og:image" content="https://generalscamp.github.io/forum/img_base/main_page/rift-raid-points-icon.webp">
 </head>
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-12 mb-2">
         <div class="col-12 page-title">
-          <h1>RIFT EVENT REWARDS</h1>
+          <h1>RIFT EVENT</h1>
         </div>
 
         <div id="topButtonsContainer">
