Added reserve units

--- a/calculators/rift_raid_points/index.html
+++ b/calculators/rift_raid_points/index.html
@@ -71,6 +71,11 @@
               <input type="number" id="defeated" class="form-control" min="0" value="20000">
             </div>
 
+            <div class="col-12 col-md-6 col-lg-4 form-group">
+              <label for="defeatedReserve">Defeated reserve units</label>
+              <input type="number" id="defeatedReserve" class="form-control" min="0" max="10000000" value="0">
+            </div>
+
             <div class="d-none d-lg-block col-lg-4 form-group"></div>
           </form>
         </div>
